Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/sales_accrual__c.object-meta.xml
<CustomObject>
    <label>Sales Accrual</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Accrual</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>