Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Accrual (Account)</relationshipLabel>
    <relationshipName>Sales_Accrual</relationshipName>
    <type>Lookup</type>
</CustomField>