Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Bill_amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_amount__c</fullName>
    <label>Bill amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>