Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Bill_Image__c.field-meta.xml
<CustomField>
    <fullName>Bill_Image__c</fullName>
    <label>Bill Image</label>
    <type>Url</type>
</CustomField>