Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Bonus_point__c.field-meta.xml
<CustomField>
    <fullName>Bonus_point__c</fullName>
    <formula>IF ( post_bonus_point__c &gt; 0, post_bonus_point__c,  pre_bonus_point__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>