Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Accrual</relationshipLabel>
    <relationshipName>Sales_Accrual_dealer</relationshipName>
    <type>Lookup</type>
</CustomField>