Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Enterprise_points__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_points__c</fullName>
    <formula>IF(post_enterprise_point__c &gt; 0, post_enterprise_point__c, Pre_enterprise_point__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>