Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Is_auto_approved__c.field-meta.xml
<CustomField>
    <fullName>Is_auto_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is auto approved</label>
    <type>Checkbox</type>
</CustomField>