Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/post_bonus_point__c.field-meta.xml
<CustomField>
    <fullName>post_bonus_point__c</fullName>
    <label>Post bonus point</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>