Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Pre_enterprise_point__c.field-meta.xml
<CustomField>
    <fullName>Pre_enterprise_point__c</fullName>
    <label>Pre enterprise point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>