Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/scheme_point__c.field-meta.xml
<CustomField>
    <fullName>scheme_point__c</fullName>
    <label>Scheme point</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>