Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
                <default>true</default>
                <label>INITIATED</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>ON HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>