Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Sales Accrual</relationshipLabel>
    <relationshipName>Sales_Accrual_Transaction</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>