Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bill_amount__c</columns>
    <columns>Transaction__c</columns>
    <columns>post_enterprise_point__c</columns>
    <columns>Pre_enterprise_point__c</columns>
    <columns>Status__c</columns>
    <columns>Is_auto_approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>