Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/listViews/On_hold_sales_transactions.listView-meta.xml
<ListView>
    <fullName>On_hold_sales_transactions</fullName>
    <columns>NAME</columns>
    <columns>Bill_amount__c</columns>
    <columns>Dealer__c</columns>
    <columns>Transaction__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ON HOLD</value>
    </filters>
    <label>On hold sales transactions</label>
</ListView>