Partial_14Dec2021/force-app/main/default/objects/sales_accrual__c/listViews/Pending_approval.listView-meta.xml
<ListView>
    <fullName>Pending_approval</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bill_amount__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>PENDING</value>
    </filters>
    <label>Pending approval</label>
</ListView>